# shaderclone

./: .gitignore  .gitmodules  CMakeLists.txt  main.c  tasks.txt
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
shaders/: hello.fs  hello.vs
tiny_engine/geo/: CMakeLists.txt  quad.c  triangle.c
tiny_engine/geo/include/te/geo/: quad.h  triangle.h
tiny_engine/shaders/: CMakeLists.txt  te_shader.c
tiny_engine/shaders/include/te/shader/: te_shader.h
